--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Do not add `link` tags-->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <!-- <link rel='stylesheet' href='assets/styles/index.scss'> -->
-  <link rel='stylesheet' href='assets/styles/styles.css'>
+  <!-- <link rel='stylesheet' href='assets/styles/styles.css'> -->
 
   <script type='text/javascript' src='assets/scripts/JS.js'></script>
 
