--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <!-- Do not add `link` tags-->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
   <link rel='stylesheet' href='assets/styles/index.scss'>
-  <!-- <link rel='stylesheet' href='assets/styles/styles.css'> -->
+  <link rel='stylesheet' href='assets/styles/styles.css'>
 
   <script type='text/javascript' src='assets/scripts/JS.js'></script>
 
@@ -37,8 +37,8 @@
       ; span style="margin-left:70px">Display
       Past Games</span></button>
     <!-- <button id='newGameButton' ; class="btn btn-primary" ; span style="margin-left:80px">New Game</span></button> -->
-    <button onClick='beginGame()' ; class="btn btn-primary" ; span style="margin-left:80px">Reset</span></button>
-    <button onClick='beginGame()' ; class="btn btn-primary" ; span style="margin-left:80px">New Game</span></button>
+    <button onClick='beginGame()' id="reset-btn" class="btn btn-primary"  span style="margin-left:80px">Reset</span></button>
+    <button onClick='beginGame()' id="newGame-btn" class="btn btn-primary"  span style="margin-left:80px">New Game</span></button>
 
 
     <!-- Sign up Button -->
