--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
 
   <!-- Do not add `link` tags-->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <link rel='stylesheet' href='assets/styles/index.scss'>
-  <link rel='stylesheet' href='assets/styles/styles.css'>
+  <!-- <link rel='stylesheet' href='assets/styles/index.scss'>
+  <link rel='stylesheet' href='assets/styles/styles.css'> -->
 
-  <script type='text/javascript' src='assets/scripts/JS.js'></script>
+  <!-- <script type='text/javascript' src='assets/scripts/JS.js'></script> -->
 
   <!-- Do not add `script` tags-->
   <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
