--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 
   <!-- Do not add `link` tags-->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel='stylesheet' href='assets/styles/index.scss'>
-  <link rel='stylesheet' href='assets/styles/styles.css'> -->
 
-  <!-- <script type='text/javascript' src='assets/scripts/JS.js'></script> -->
+  <!-- Testing scripts -->
+  <!-- <link rel='stylesheet' href='assets/styles/index.scss'>
+  <link rel='stylesheet' href='assets/styles/styles.css'>
+  <script type='text/javascript' src='assets/scripts/JS.js'></script> -->
 
   <!-- Do not add `script` tags-->
   <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
@@ -173,7 +174,7 @@
               <h5 class="modal-title" id="exampleModalLabel"></h5>
             </div>
             <div class="modal-body">
-              <form id='sign-out-form' class='border'>
+              <!-- <form id='sign-out-form' class='border'> -->
                 <fieldset>
                   <div>
                     <input type="submit" value="Display Past Games" />
