--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <h5 class="modal-title" id="exampleModalLabel"></h5>
           </div>
           <div class="modal-body">
-            <form id='sign-out-form' class='border'>
+            <form id='display-past-games-form' class='border'>
               <fieldset>
                 <div>
                   <input type="submit" value="Display Past Games" />
