--- a/index.html
+++ b/index.html
@@ -230,15 +230,15 @@
       </aside>
       <section>
         <!-- Video -->
-        <div class='video'>
+        <!-- <div class='video'>
           <iframe width="300" height="150" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
           </video>
-        </div>
+        </div> -->
         <!-- Audio Song in a Loop -->
-        <div class='audio'>
+        <!-- <div class='audio'> -->
           <!-- <audio controls loop> -->
-          <iframe src="https://freemusicdownloads.world/songs/all-of-me/?player=1785"></iframe>
-          </audio>
+          <!-- <iframe src="https://freemusicdownloads.world/songs/all-of-me/?player=1785"></iframe> -->
+          <!-- </audio> -->
         </div>
       </section>
     </div>
