fix video and audio

--- a/index.html
+++ b/index.html
@@ -4,19 +4,11 @@
 <head>
   <title>Tic-Tac-Toe</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-
   <!-- Do not add `link` tags-->
   <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
-  <!-- Testing scripts -->
-  <!-- <link rel='stylesheet' href='assets/styles/index.scss'> -->
-  <!-- <link rel='stylesheet' href='assets/styles/styles.css'> -->
-  <!-- <script type='text/javascript' src='assets/scripts/JS.js'></script> -->
-
   <!-- Do not add `script` tags-->
   <script src="public/vendor.js" type="text/javascript" charset="utf-8" defer></script>
   <script src="public/application.js" type="text/javascript" charset="utf-8" defer></script>
-
 </head>
 
 <body>
@@ -230,15 +222,15 @@
       </aside>
       <section>
         <!-- Video -->
-        <!-- <div class='video'>
+        <div class='video'>
           <iframe width="300" height="150" src="https://www.youtube.com/embed/tgbNymZ7vqY"></iframe>
           </video>
-        </div> -->
+        </div>
         <!-- Audio Song in a Loop -->
-        <!-- <div class='audio'> -->
-          <!-- <audio controls loop> -->
-          <!-- <iframe src="https://freemusicdownloads.world/songs/all-of-me/?player=1785"></iframe> -->
-          <!-- </audio> -->
+        <div class='audio'>
+          <audio controls loop>
+            <iframe src="https://freemusicdownloads.world/songs/all-of-me/?player=1785"></iframe>
+          </audio>
         </div>
       </section>
     </div>
