change buttons html

--- a/index.html
+++ b/index.html
@@ -15,24 +15,24 @@
   <header class='header'>
     <h1>Tic Tac Toe</h1>
 
-    <button type="button" id="sign-up-btn" class="btn btn-primary" data-toggle="modal" data-target="#signUpModal" ;
+    <button type="button" id="sign-up-btn" class="btn btn-outline-secondary" data-toggle="modal" data-target="#signUpModal" ;
       span style="margin-left:80px;">Sign
       Up</span></button>
-    <button type="button" id="sign-in-btn" class="btn btn-primary" data-toggle="modal" data-target="#signInModal" ;
+    <button type="button" id="sign-in-btn" class="btn btn-outline-secondary" data-toggle="modal" data-target="#signInModal" ;
       span style="margin-left:80px;">Sign
       In</span></button>
-    <button type="button" id="sign-out-btn" class="btn btn-primary" data-toggle="modal" data-target="#signOutModal" ;
+    <button type="button" id="sign-out-btn" class="btn btn-outline-secondary" data-toggle="modal" data-target="#signOutModal" ;
       span style="margin-left:80px;">Sign
       Out</span></button>
-    <button type="button" id="password-btn" class="btn btn-primary" data-toggle="modal" data-target="#changePasswordModal"
+    <button type="button" id="password-btn" class="btn btn-outline-secondary" data-toggle="modal" data-target="#changePasswordModal"
       ; span style="margin-left:80px;">Change
       Password</span></button>
-    <button type="button" id="showModal" class="btn btn-primary" data-toggle="modal" data-target="#displayPastGamesModal"
+    <button type="button" id="showModal" class="btn btn-outline-secondary" data-toggle="modal" data-target="#displayPastGamesModal"
       ; span style="margin-left:70px">Display
       Past Games</span></button>
-    <!-- <button id='newGameButton' ; class="btn btn-primary" ; span style="margin-left:80px">New Game</span></button> -->
-    <button onClick='beginGame()' id="reset-btn" class="btn btn-primary" span style="margin-left:80px">Reset</span></button>
-    <button onClick='beginGame()' id="new-game-btn" class="btn btn-primary" span style="margin-left:80px">New Game</span></button>
+    <!-- <button id='newGameButton' ; class="btn btn-outline-secondary" ; span style="margin-left:80px">New Game</span></button> -->
+    <button onClick='beginGame()' id="reset-btn" class="btn btn-outline-secondary" span style="margin-left:80px">Reset</span></button>
+    <button onClick='beginGame()' id="new-game-btn" class="btn btn-outline-secondary" span style="margin-left:80px">New Game</span></button>
   </header>
 
   <!-- Sign up Button -->
@@ -59,7 +59,7 @@
           </div>
           <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-dismiss="modal">CLOSE</button>
-            <button type="button" class="btn btn-primary" id="sign-up">SAVE</button>
+            <button type="button" class="btn btn-outline-secondary" id="sign-up">SAVE</button>
           </div>
         </div>
       </div>
@@ -115,7 +115,7 @@
                 <div class='borderThree-content' id='exampleThree'>
                   <input class="form-control" type="password" name="passwords[old]" placeholder="Old Password" />
                   <input class="form-control" type="password" name="passwords[new]" placeholder="New Password" />
-                  <button type="submit" class="btn btn-primary" name="submit" value="Change Password">Change Password</button>
+                  <button type="submit" class="btn btn-outline-secondary" name="submit" value="Change Password">Change Password</button>
                 </div>
               </fieldset>
             </form>
