--- a/index.html
+++ b/index.html
@@ -227,11 +227,11 @@
           </video>
         </div>
         <!-- Audio Song in a Loop -->
-        <div class='audio'>
+        <!-- <div class='audio'>
           <audio controls loop>
             <iframe src="https://freemusicdownloads.world/songs/all-of-me/?player=1785"></iframe>
           </audio>
-        </div>
+        </div> -->
       </section>
     </div>
   </div>
